<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ketudom.pakasit.mte_203.it58.findmylosttni.EditLost">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="172dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/titlelost"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="353dp"
        android:layout_height="387dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="49dp">

            <TextView
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:text="@string/whatlost"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtWhat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="383dp"
            android:layout_height="47dp">

            <TextView
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:text="@string/wherelost"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtWhere"
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:text="@string/daylost"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtDate"
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <TextView
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtdes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:text="@string/namelost"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="@string/tellost"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edtTel"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/buttel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="โทร" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="@string/edtstatus"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/spnstatus"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/spnstatus" />

        </TableRow>

    </LinearLayout>

    <Button
        android:id="@+id/butEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/butedit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/butSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/butsend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/butDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/butdel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>
